# Ollala-AI-OCR

./: .env.example  .gitignore  CONTRIBUTING.md  README-web.md  README.md  SECURITY.md  index.html  launch.command  launch.html  local_web_app.py  ocr_to_md.py  pyproject.toml  requirements.txt
static/: app.css  app.js
templates/: index.html
