[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollala-ai-ocr"
version = "0.1.0"
description = "Local AI-based OCR for converting PDFs and images to Markdown with Ollama and glm-ocr."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Anthony" }
]
keywords = ["ocr", "ollama", "markdown", "pdf", "ai", "glm-ocr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "ollama",
  "pdf2image",
  "pillow",
  "flask",
]

[project.urls]
Homepage = "https://github.com/realanthonyc/ollala-ai-ocr"
Issues = "https://github.com/realanthonyc/ollala-ai-ocr/issues"

[tool.setuptools]
py-modules = ["ocr_to_md", "local_web_app"]
